[gd_scene load_steps=7 format=2]

[ext_resource path="res://stone.png" type="Texture" id=1]
[ext_resource path="res://Stone.gd" type="Script" id=2]
[ext_resource path="res://SuperLegendBoy-4w8Y.ttf" type="DynamicFontData" id=6]

[sub_resource type="PhysicsMaterial" id=2]
bounce = 0.33

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 3
outline_color = Color( 0, 0, 0, 0.501961 )
font_data = ExtResource( 6 )

[node name="Stone" type="RigidBody2D" groups=["Stone"]]
mass = 4.61
physics_material_override = SubResource( 2 )
gravity_scale = 2.0
contacts_reported = 4
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="Stone" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 2
vframes = 2

[node name="Color1" type="Sprite" parent="Stone"]
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 1

[node name="Color2" type="Sprite" parent="Stone"]
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 2

[node name="Edge" type="Sprite" parent="Stone"]
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Stone_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
